<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/view_toolbar" />

    <Button
        android:id="@+id/buttonOpenActivity4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title_button_open_fourth_activity"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/buttonOpenActivity2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title_button_open_second_activity"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/buttonOpenActivity6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title_button_open_sixth_activity"
        android:textAllCaps="false" />

</LinearLayout>